--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   </head>
   <body class="page theme_dark">
     <header class="header">
-      <h1 class="heading content-section">Карты подскажут</h1>
+      <h1 class="heading content-section header__title">Карты подскажут</h1>
     </header>
     <main class="content content-section">
-      <h2 class="heading content-section">Креативный подход к решению проблем</h2>
-      <h2 class="heading content-section">Что это за колода</h2>
-      <h2 class="heading content-section">Как работают «обходные стратегии»</h2>
-      <h2 class="heading content-section">Кто пользовался Oblique Strategies</h2>
+      <h2 class="heading content-title">Креативный подход к решению проблем</h2>
+      <h2 class="heading content-title">Что это за колода</h2>
+      <h2 class="heading content-title">Как работают «обходные стратегии»</h2>
+      <h2 class="heading content-title">Кто пользовался Oblique Strategies</h2>
     </main>
     <footer class="footer"></footer>
 
