--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body class="page theme_dark">
     <header class="header">
-      <h1 class="heading content-section header__title">Карты подскажут</h1>
+      <h1 class="heading content-section">Карты подскажут</h1>
     </header>
     <main class="content content-section"></main>
     <footer class="footer"></footer>
