Разместил некоторые параграфы отдельно. Добавил нижние отступы в блоке с параграфом

--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
           её с первого раза и начинаете думать, что вообще ни на что не
           способны. Мозг запоминает эту модель поведения, и на следующий день
           вам не хочется делать вообще ничего — ведь всё равно ничего не
-          получится. Как выйти из такого застоя? Есть разные варианты, мы
-          поговорим об одном из самых креативных — колоде карт.
+          получится.
+        </p>
+        <p class="content__paragraph">
+          Как выйти из такого застоя? Есть разные варианты, мы поговорим об
+          одном из самых креативных — колоде карт.
         </p>
       </div>
       <h2 class="heading content__title">Что это за колода</h2>
@@ -44,9 +47,11 @@
         <p class="content__paragraph">
           Oblique Strategies в основном используют музыканты, но колода подходит
           для преодоления творческого кризиса в любой сфере. Её рекомендуют
-          писателям, продакт-менеджерам, художникам и разработчикам. Колода
-          состоит из ста с лишним карточек, на которых написано всего по одной
-          фразе. Часто — довольно абстрактной. Например, «Какую ошибку вы
+          писателям, продакт-менеджерам, художникам и разработчикам.
+        </p>
+        <p class="content__paragraph">
+          Колода состоит из ста с лишним карточек, на которых написано всего по
+          одной фразе. Часто — довольно абстрактной. Например, «Какую ошибку вы
           совершили в прошлый раз?» или «Замените двусмысленность на
           конкретику», или даже «Добавьте что-то ещё». Эти фразы и надо
           применять к проблеме или творческому блоку. Каким именно способом?
@@ -57,17 +62,21 @@
       <div class="content__text-block">
         <p class="content__paragraph">
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
+        </p>
+        <blockquote>
           «Эти карты появились, потому что я оказывался в рабочих ситуациях
           (особенно в звукозаписывающих студиях), когда из-за паники быстро
           забывал, что кроме самых очевидных решений были и другие — косвенные.
           И часто именно такие неочевидные способы выдавали гораздо более
-          интересные результаты, чем решения „в лоб“». Таким образом, колода Ино
-          поощряет нас видеть препятствия не как тупики, а как отправные точки
-          для поиска более интересных решений. И кстати, сейчас необязательно
-          охотиться за редкими физическими колодами Oblique Strategies — тем
-          более, что их моментально разбирают фанаты Ино. Есть довольно
-          симпатичные веб-сайты с диджитал-эквивалентами карточек и приложения
-          для
+          интересные результаты, чем решения „в лоб“».
+        </blockquote>
+        <p class="content__paragraph">
+          Таким образом, колода Ино поощряет нас видеть препятствия не как
+          тупики, а как отправные точки для поиска более интересных решений. И
+          кстати, сейчас необязательно охотиться за редкими физическими колодами
+          Oblique Strategies — тем более, что их моментально разбирают фанаты
+          Ино. Есть довольно симпатичные веб-сайты с диджитал-эквивалентами
+          карточек и приложения для
           <a
             href="https://apps.apple.com/us/app/oblique-strategies-se/id1104927011"
             target="_blank"
