Добавил тег для блока цитаты в одном из параграфов

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p class="content__paragraph">
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
         </p>
-        <blockquote>
+        <blockquote class="content__blockquote">
           «Эти карты появились, потому что я оказывался в рабочих ситуациях
           (особенно в звукозаписывающих студиях), когда из-за паники быстро
           забывал, что кроме самых очевидных решений были и другие — косвенные.
