--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@
         </p>
       </div>
       <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
-      <div class="content__text-block"></div>
+      <div class="content__text-block">
+        <ul class="content__list">
+          <li class="content__list-item">Дэвид Боуи во время записи Берлинской трилогии;</li>
+          <li class="content__list-item">Talking Heads и Дэвид Бирн в сольной карьере;</li>
+          <li class="content__list-item">Coldplay;</li>
+          <li class="content__list-item">MGMT.</li>
+        </ul>
+      </div>
     </main>
     <footer class="footer"></footer>
 
