--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
         </p>
         <blockquote class="content__blockquote">
-          «Эти карты появились, потому что я оказывался в рабочих ситуациях
-          (особенно в звукозаписывающих студиях), когда из-за паники быстро
-          забывал, что кроме самых очевидных решений были и другие — косвенные.
-          И часто именно такие неочевидные способы выдавали гораздо более
-          интересные результаты, чем решения „в лоб“».
+          <p>
+            «Эти карты появились, потому что я оказывался в рабочих ситуациях
+            (особенно в звукозаписывающих студиях), когда из-за паники быстро
+            забывал, что кроме самых очевидных решений были и другие —
+            косвенные. И часто именно такие неочевидные способы выдавали гораздо
+            более интересные результаты, чем решения „в лоб“».
+          </p>
         </blockquote>
         <p class="content__paragraph">
           Таким образом, колода Ино поощряет нас видеть препятствия не как
@@ -93,10 +95,14 @@
       <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
       <div class="content__text-block">
         <ul class="content__list">
-          <li class="content__list-item">Дэвид Боуи во время записи Берлинской трилогии;</li>
-          <li class="content__list-item">Talking Heads и Дэвид Бирн в сольной карьере;</li>
-          <li class="content__list-item">Coldplay;</li>
-          <li class="content__list-item">MGMT.</li>
+          <li>
+            Дэвид Боуи во время записи Берлинской трилогии;
+          </li>
+          <li>
+            Talking Heads и Дэвид Бирн в сольной карьере;
+          </li>
+          <li>Coldplay;</li>
+          <li>MGMT.</li>
         </ul>
       </div>
     </main>
