--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h2 class="heading content__title">
         Креативный подход к решению проблем
       </h2>
-      <div class="content__text-block">
+      <div class="content__text-block content__text-block_type_first-lettered">
         <p class="content__paragraph">
           Творческие кризисы, кажется, рано или поздно испытывает любой человек.
           Часто бывает так, что вы сталкиваетесь с проблемой, не можете решить
@@ -34,7 +34,7 @@
         </p>
       </div>
       <h2 class="heading content__title">Что это за колода</h2>
-      <div class="content__text-block">
+      <div class="content__text-block content__text-block_type_first-lettered">
         <p class="content__paragraph">
           Тут могло бы быть что-то про пользу игры в «Дурака» или о высших
           арканах Таро, но у нас на примете другая колода. Она называется
@@ -59,7 +59,8 @@
         </p>
       </div>
       <h2 class="heading content__title">Как работают «обходные стратегии»</h2>
-      <div class="content__text-block">
+      <div class="content__text-block 
+      content__text-block_type_first-lettered">
         <p class="content__paragraph">
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
         </p>
@@ -95,12 +96,8 @@
       <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
       <div class="content__text-block">
         <ul class="content__list">
-          <li>
-            Дэвид Боуи во время записи Берлинской трилогии;
-          </li>
-          <li>
-            Talking Heads и Дэвид Бирн в сольной карьере;
-          </li>
+          <li>Дэвид Боуи во время записи Берлинской трилогии;</li>
+          <li>Talking Heads и Дэвид Бирн в сольной карьере;</li>
           <li>Coldplay;</li>
           <li>MGMT.</li>
         </ul>
