--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
           жанра эмбиент Брайан Ино и мультимедиа-художник Питер Шмидт.
         </p>
       </div>
+      <figure class="content__figure">
+        <picture>
+          <source
+            srcset="./images/cards-1x.avif 1x, ./images/cards-2x.avif 2x"
+            type="image/avif"
+          />
+          <source
+            srcset="./images/cards-1x.webp 1x, ./images/cards-2x.webp 2x"
+            type="image/webp"
+          />
+          <img
+            class="content__picture"
+            srcset="./images/cards-1x.png 1x, ./images/cards-2x.png 2x"
+            alt="Колода Oblique Strategies на деревянном столе в окружении смартфона, ручки, записной книжки, ручки и цветка"
+            loading="lazy"
+          />
+        </picture>
+        <figcaption class="content__picture-caption">
+          <p>Колода Oblique Strategies</p>
+        </figcaption>
+      </figure>
       <div class="content__text-block">
         <p class="content__paragraph">
           Oblique Strategies в основном используют музыканты, но колода подходит
@@ -59,8 +80,7 @@
         </p>
       </div>
       <h2 class="heading content__title">Как работают «обходные стратегии»</h2>
-      <div class="content__text-block 
-      content__text-block_type_first-lettered">
+      <div class="content__text-block content__text-block_type_first-lettered">
         <p class="content__paragraph">
           Вот что сам Брайан Ино рассказывает о создании Oblique Strategies:
         </p>
