--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <body class="page theme_dark">
     <header class="header">
       <h1 class="heading content-section header__title">Карты подскажут</h1>
+      <!-- <nav class="header__menu content-section">
+        <div class="header__logo">
+          <svg xmlns="http://www.w3.org/2000/svg" width="135" height="25">
+            <use href="./images/logo.svg#logo"></use>
+          </svg>
+        </div>
+        
+      </nav> -->
     </header>
     <main class="content content-section">
       <h2 class="heading content__title">
@@ -113,6 +121,10 @@
           >.
         </p>
       </div>
+      <article class="content__card">
+        <h3 class="heading content__card-title">Use an <span class="colored-text">old idea</span></h3>
+        <p class="content__card-subtitle">Воспользуйтесь старой идеей</p>
+      </article>
       <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
       <div class="content__text-block">
         <ul class="content__list">
