Стилизовал фокусы для всех ссылок и кнопок, добавил disabled

--- a/index.html
+++ b/index.html
@@ -19,13 +19,20 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="135" height="25">
             <use href="./images/logo.svg#logo"></use>
           </svg>
-        </div> 
+        </div>
         <ul class="header__theme-toggler">
           <li>
-            <button class="header__theme-button header__theme-button_type_dark">Тёмная</button>
+            <button class="header__theme-button header__theme-button_type_dark">
+              Тёмная
+            </button>
           </li>
           <li>
-            <button class="header__theme-button header__theme-button_type_light header__theme-button_is-active" disabled>Светлая</button>
+            <button
+              class="header__theme-button header__theme-button_type_light header__theme-button_is-active"
+              disabled
+            >
+              Светлая
+            </button>
           </li>
         </ul>
       </nav>
@@ -129,7 +136,9 @@
         </p>
       </div>
       <article class="content__card">
-        <h3 class="heading content__card-title">Use an <span class="colored-text">old idea</span></h3>
+        <h3 class="heading content__card-title heading">
+          Use an <span class="colored-text">old idea</span>
+        </h3>
         <p class="content__card-subtitle">Воспользуйтесь старой идеей</p>
       </article>
       <h2 class="heading content__title">Кто пользовался Oblique Strategies</h2>
